chore(Install) cleanup, format and adjust license

--- a/licenceAgreement.html
+++ b/licenceAgreement.html
@@ -6,7 +6,6 @@
    * The Initial Developer of the Original Code is vtiger.
    * Portions created by vtiger are Copyright (C) vtiger.
    * All Rights Reserved.
-  *
  ********************************************************************************/
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
@@ -209,17 +208,13 @@ EXHIBIT A -vtiger Public License.
 <br><br>
 Software distributed under the License is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License for the specific language governing rights and limitations under the License.
 <br><br>
-The Original Code is vtiger Outlook Plug-in.
+The Original Code is:  coreBOS Open Source
 <br><br>
-The Initial Developer of the Original Code is vtiger. Portions created by  vtiger are Copyright (C) www.vtiger.com. All Rights Reserved.
-<br><br>
-Contributor(s): ______________________________________.
+The Initial Developer of the Original Code is vtiger.<br>
+Portions created by vtiger are Copyright (C) vtiger.<br>
+All Rights Reserved.
 <br><br>
       [NOTE: The text of this Exhibit A may differ slightly from the text of the notices in the Source Code files of the Original Code. You should use the text of this Exhibit A rather than the text found in the Original Code Source Code for Your Modifications.]
-
 <br><br>
- 
-
-
-	</body>
+</body>
 </html>
