chore(Javascript) eliminate deprecated language from script everywhere except Smarty. Code cleanup and formatting

--- a/modules/Calendar4You/color_picker.html
+++ b/modules/Calendar4You/color_picker.html
@@ -20,7 +20,7 @@ Note: Script consists of two files: picker.js and picker.html
 <table cellpadding=0 cellspacing=2 border=0 width=184>
 <form>
 <tr><td align="center">
-<script language="JavaScript">
+<script>
 	var P = opener.C_TCP;
 	onload = "P.show(P.initPalette)";
 // 	document.forms[0].elements[0].selectedIndex = P.initPalette;
