--- a/modules/Products/AddProductsToPriceBook.html
+++ b/modules/Products/AddProductsToPriceBook.html
@@ -9,7 +9,7 @@
  ********************************************************************************/
 -->
 <!-- BEGIN: main -->
-<script language="javascript">
+<script>
 
 function updateAllListPrice()
 {
@@ -27,7 +27,7 @@ function updateAllListPrice()
 }
 
 </script>
-<script language="javascript" src="modules/PriceBooks/PriceBooks.js"></script>
+<script src="modules/PriceBooks/PriceBooks.js"></script>
 <BR>
 <BR>
 {PRODUCTLISTHEADER}
