--- a/modules/Rss/Popup.html
+++ b/modules/Rss/Popup.html
@@ -5,13 +5,11 @@
  * The Initial Developer of the Original Code is vtiger.
  * Portions created by vtiger are Copyright (C) vtiger.
  * All Rights Reserved.
-*
  ********************************************************************************/
 -->
-<!-- BEGIN: main -->
 <html>
-<script language="JavaScript" type="text/javascript" src="include/js/general.js"></script>
-<script type="text/javascript" language="JavaScript" src="modules/Rss/Rss.js">
+<script type="text/javascript" src="include/js/general.js"></script>
+<script type="text/javascript" src="modules/Rss/Rss.js">
 {JAVASCRIPT}
 </script>
 <head>
@@ -54,4 +52,3 @@
 </body>
 </form>
 </html>
-<!-- END: main -->
