--- a/modules/Products/AddProductToPriceBooks.html
+++ b/modules/Products/AddProductToPriceBooks.html
@@ -9,7 +9,7 @@
  ********************************************************************************/
 -->
 <!-- BEGIN: main -->
-<script language="javascript">
+<script>
 function addtopricebook()
 {
 	x = document.addToPB.selected_id.length;
@@ -116,7 +116,7 @@ function updateAllListPrice(unitprice)
 }
 
 </script>
-<script language="javascript" src="modules/Products/Products.js"></script>
+<script src="modules/Products/Products.js"></script>
 <table width="95%" border="0" cellpadding="0" cellspacing="0">
 <tr><td colspan="3">&nbsp;</td></tr>
 <tr>
