fix(RSS) eliminate magpierss(GPL) in favor of simplepie(BSD) and upgrade simplepie to latest version for PHP7 support

--- a/copyright.html
+++ b/copyright.html
@@ -16,7 +16,7 @@
 <div class="loginWrapper">
 <H1>coreBOS Licence and Copyright</H1>
 This software is a collective work consisting of various Open Source components like:<br> 
-Apache software, MySQL server, PHP, vtiger CRM, ADOdb, Smarty, JQuery, PHPMailer, MagpieRSS, just to mention a few, each Licenced under a separate Open Source Licence. 
+Apache software, MySQL server, PHP, vtiger CRM, ADOdb, Smarty, JQuery, PHPMailer just to mention a few, each Licenced under a separate Open Source Licence. 
 neither <b>coreBOS</b> nor <b>TSolucio</b> (the company behind coreBOS) are affiliated with nor endorsed by any of the above providers.<br>
 <br>
 In general the whole application is Licenced under the Vtiger Public Licence (VPL), which is an adaption of Mozilla Public Licence. Where this may produce conflicts with third party libraries used, each library will maintain their own Licence. If any licensing conflicts are detected and require our action please contact us at <a href="mailto:corebos@tsolucio.com">corebos@tsolucio.com</a> and we will attend at the shortest possible .
