--- a/infscroll.html
+++ b/infscroll.html
@@ -6,8 +6,10 @@
 <main>
     <h1>Infinite Scroll + Pagination Experiment</h1>
     <p>After a poll by <a href="https://twitter.com/smashingmag">@smashingmag</a>, <a href="https://twitter.com/TimSeverien/status/693186708494536704">I got the idea to combine pagination and infinite scroll.</a> The former gives the user control, but needs more effort. The latter lacks control, but requires no special interaction.</p>
+    <div class="scrollrange" id="scrollrange" onscroll="scrollrange_onscroll()">
     <div class="article-list" id="article-list"></div>
-    <ul class="article-list__pagination article-list__pagination--inactive" id="article-list-pagination"></ul>
+    <div class="article-list__pagination article-list__pagination--inactive" id="article-list-pagination"></div>
+    </div>
 </main>
 <script src="infscroll.js"></script>
 </body>
