--- a/infscroll.html
+++ b/infscroll.html
@@ -1,16 +1,60 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="infscroll.css" />
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title>DataTable example</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <style>
+        datatable stats {
+            float: right;
+            line-height: 2rem;
+            color: #999;
+        }
+    </style>
+</head>
 <body>
-<main>
-    <h1>Infinite Scroll + Pagination Experiment</h1>
-    <p>After a poll by <a href="https://twitter.com/smashingmag">@smashingmag</a>, <a href="https://twitter.com/TimSeverien/status/693186708494536704">I got the idea to combine pagination and infinite scroll.</a> The former gives the user control, but needs more effort. The latter lacks control, but requires no special interaction.</p>
-    <div class="scrollrange" id="scrollrange" onscroll="scrollrange_onscroll()">
-    <div class="article-list" id="article-list"></div>
-    <div class="article-list__pagination article-list__pagination--inactive" id="article-list-pagination"></div>
-    </div>
-</main>
+
+<div class="container p-t-3">
+
+    <datatable url="infscroll.php" template="users_row_template">
+        <table class="table">
+            <tr>
+            <th>crmid</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Email Opt Out</th>
+                <th>Do Not Call</th>
+                <th>Actions</th>
+            </tr>
+        </table>
+        <footer>
+            <pagination limit="9" outer></pagination>
+            <stats></stats>
+        </footer>
+    </datatable>
+
+</div>
+
+<table id="users_row_template" hidden>
+    <tr>
+        <td v="crmid"></td>
+        <td v="First Name"></td>
+        <td v="Last Name"></td>
+        <td v="Email"></td>
+        <td v="Email Opt Out"></td>
+        <td v="Do Not Call"></td>
+        <td><a av="href:reportrowaction">Detail View</a></td>
+    </tr>
+</table>
+
+<script src="include/bunnyjs/utils_dom.min.js"></script>
+<script src="include/bunnyjs/ajax.min.js"></script>
+<script src="include/bunnyjs/template.min.js"></script>
+<script src="include/bunnyjs/pagination.min.js"></script>
+<script src="include/bunnyjs/url.min.js"></script>
+<script src="include/bunnyjs/datatable.min.js"></script>
+
 <script src="infscroll.js"></script>
 </body>
 </html>
